# voclip-GUI

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: config_manager.py  main.py  main_window.py  system_tray.py  utils.py  voclip_runner.py
src/widgets/: __init__.py  controls_panel.py  history_panel.py  listen_status.py  settings_panel.py  transcription_panel.py  wakeword_panel.py
tests/: test_config_manager.py  test_voclip_runner.py
