[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voclip-gui"
version = "0.1.0"
description = "GUI frontend for voclip voice-to-clipboard tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "toml>=0.10",
]

[project.scripts]
voclip-gui = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
